--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fa-IR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/fa-IR/Resources.resw
@@ -249,6 +249,12 @@
   <data name="Common_Actions_Install">
     <value>Install</value>
   </data>
+  <data name="Common_Actions_MoveDown">
+    <value>Move Down</value>
+  </data>
+  <data name="Common_Actions_MoveUp">
+    <value>Move Up</value>
+  </data>
   <data name="Common_Actions_Reconnect">
     <value>اتصال مجدد</value>
   </data>
@@ -3175,6 +3181,9 @@ Secure Core</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Description">
     <value>به Proton VPN با سیستم نام دامنه (DNS) خودتان وصل شوید. فقط از سرورهای DNS که اعتماد دارید استفاده کنید.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_Footer">
+    <value>We'll try to connect to these servers in order. If none of them work, the default Proton VPN DNS will be used.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Header">
     <value>سرورهای DNS ({0})</value>
