--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
@@ -249,6 +249,12 @@
   <data name="Common_Actions_Install">
     <value>Instalar</value>
   </data>
+  <data name="Common_Actions_MoveDown">
+    <value>Move Down</value>
+  </data>
+  <data name="Common_Actions_MoveUp">
+    <value>Move Up</value>
+  </data>
   <data name="Common_Actions_Reconnect">
     <value>Voltar a ligar</value>
   </data>
@@ -3175,6 +3181,9 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Description">
     <value>Conecte-se à Proton VPN com o seu próprio sistema de nome de domínio (DNS). Utilize apenas servidores DNS em que confia.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_Footer">
+    <value>We'll try to connect to these servers in order. If none of them work, the default Proton VPN DNS will be used.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Header">
     <value>Servidores DNS ({0})</value>
