--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ru-RU/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ru-RU/Resources.resw
@@ -249,6 +249,12 @@
   <data name="Common_Actions_Install">
     <value>Установить</value>
   </data>
+  <data name="Common_Actions_MoveDown">
+    <value>Move Down</value>
+  </data>
+  <data name="Common_Actions_MoveUp">
+    <value>Move Up</value>
+  </data>
   <data name="Common_Actions_Reconnect">
     <value>Переподключиться</value>
   </data>
@@ -3391,6 +3397,9 @@
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Description">
     <value>Подключайтесь к Proton VPN, используя собственную систему доменных имен (DNS). Используйте только те серверы DNS, которым вы доверяете.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_Footer">
+    <value>We'll try to connect to these servers in order. If none of them work, the default Proton VPN DNS will be used.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Header">
     <value>DNS-серверы ({0})</value>
