--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ka-GE/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ka-GE/Resources.resw
@@ -249,6 +249,12 @@
   <data name="Common_Actions_Install">
     <value>დაყენება</value>
   </data>
+  <data name="Common_Actions_MoveDown">
+    <value>Move Down</value>
+  </data>
+  <data name="Common_Actions_MoveUp">
+    <value>Move Up</value>
+  </data>
   <data name="Common_Actions_Reconnect">
     <value>თავიდან დაკავშირება</value>
   </data>
@@ -3175,6 +3181,9 @@ VPN მიერთება</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Description">
     <value>მიუერთდით Proton VPN-ს თქვენი საკუთარი DNS-ით. გამოიყენეთ, მხოლოდ, DNS სერვერები, რომლებსაც ენდობით.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_Footer">
+    <value>We'll try to connect to these servers in order. If none of them work, the default Proton VPN DNS will be used.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Header">
     <value>DNS სერვერები ({0})</value>
