--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sk-SK/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sk-SK/Resources.resw
@@ -249,6 +249,12 @@
   <data name="Common_Actions_Install">
     <value>Inštalovať</value>
   </data>
+  <data name="Common_Actions_MoveDown">
+    <value>Move Down</value>
+  </data>
+  <data name="Common_Actions_MoveUp">
+    <value>Move Up</value>
+  </data>
   <data name="Common_Actions_Reconnect">
     <value>Znova pripojiť</value>
   </data>
@@ -3391,6 +3397,9 @@ Vysoké vyťaženie servera môže spomaliť vaše pripojenie.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Description">
     <value>Pripojte sa k sieti Proton VPN pomocou vlastného servera DNS. Používajte iba servery DNS, ktorým dôverujete.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_Footer">
+    <value>We'll try to connect to these servers in order. If none of them work, the default Proton VPN DNS will be used.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Header">
     <value>DNS servery ({0})</value>
