i18n: Upgrade translations from crowdin (5efa05fd). (App)

--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
@@ -3966,7 +3966,7 @@ Secure Core</value>
     <value>Адключана</value>
   </data>
   <data name="Tray_Actions_ExitApplication">
-    <value>Выхад</value>
+    <value>Выйсці</value>
   </data>
   <data name="Tray_Actions_OpenApplication">
     <value>Адкрыць {0}</value>
