--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ca-ES/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ca-ES/Resources.resw
@@ -250,10 +250,10 @@
     <value>Instal·la</value>
   </data>
   <data name="Common_Actions_MoveDown">
-    <value>Aneu cap avall</value>
+    <value>Mou avall</value>
   </data>
   <data name="Common_Actions_MoveUp">
-    <value>Aneu cap amunt</value>
+    <value>Mou amunt</value>
   </data>
   <data name="Common_Actions_Reconnect">
     <value>Torna a connectar</value>
@@ -3403,7 +3403,7 @@ Una càrrega elevada del servidor pot alentir la vostra connexió.</value>
     <value>Només les aplicacions i adreces IP seleccionades es connecten via VPN. La resta del trànsit està desprotegit.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Inverse_Short">
-    <value>Inclusió</value>
+    <value>Inclou</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
@@ -3426,7 +3426,7 @@ Una càrrega elevada del servidor pot alentir la vostra connexió.</value>
     <value>Les aplicacions i adreces IP seleccionades s'exclouen de la connexió VPN</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard_Short">
-    <value>Exclusió</value>
+    <value>Exclou</value>
     <comment>Shorter version (if possible) of "Exclude mode". To be used when available space is limited.</comment>
   </data>
   <data name="Settings_Connection_VpnAccelerator">
